--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "media-chrome": "^4.15.1",
     "motion": "^12.23.24",
     "multer": "^2.0.2",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
-    "react": "19.2.0",
+    "react": "^19.2.3",
     "react-calendly": "^4.4.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
