--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tirzahshadcn",
+  "name": "tirzah-comm",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "server": "nodemon",
+    "loadtest": "npx artillery run artillery/loadtest.yml",
     "server:build": "tsc -p server/tsconfig.json",
     "server:start": "node server/dist/index.js",
     "create-admin": "ts-node server/src/scripts/createAdmin.ts"
@@ -18,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
@@ -43,7 +45,6 @@
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
-    "@tailwindcss/postcss": "^4.1.18",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
