--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start -p $PORT",
     "lint": "eslint",
     "server": "nodemon",
     "loadtest": "npx artillery run artillery/loadtest.yml",
